# pig-game

./: .gitignore  CMakeLists.txt
include/assimp/: revision.h
include/glad/: glad.h
resources/: piggyiso.mtl  player1test.gltf  testfloor.gltf  testfloor.mtl
resources/buildings/test/: testhall.mtl
resources/character/: arms1.gltf  arms2.gltf  player1test.gltf
resources/items/: hourglass.gltf  testgun1.glb  testgun1.gltf
resources/pig/: pigshatter2.gltf  pigshatter3.gltf  pigshatter3ahh.gltf  pigshatter4.gltf  shatteredpig.gltf
resources/pig/basepig/: pigwalking1.gltf  (+1 more)
src/: basicpistol.cpp  basicpistol.hpp  hourglassbomb.cpp  hourglassbomb.hpp  main.cpp  piggy.cpp  piggy.hpp  testscene.cpp  testscene.hpp
src/base/: .gitignore  UIElement.hpp  UIMesh.cpp  UIMesh.hpp  animation.cpp  animation.hpp  animator.cpp  animator.hpp  billboardentity.cpp  billboardentity.hpp  bone.cpp  bone.hpp  camera.cpp  camera.hpp  collisionshapetype.hpp  dialogue.cpp  dialogue.hpp  gameobject.hpp  gameobjectinteractiontype.hpp  glad.c  item.cpp  item.hpp  itemusetype.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  player.cpp  player.hpp  postprocessor.cpp  postprocessor.hpp  progressbar.cpp  progressbar.hpp  rigidbodyentity.cpp  rigidbodyentity.hpp  scene.hpp  shader.cpp  shader.hpp  skybox.cpp  skybox.hpp  (+14 more)
src/shaders/: armaturegameobject.vs  basic.fs  basic.vs  billboard.fs  billboard.vs  outline.fs  outline.vs  screenshader.fs  superbasic.fs  superbasic.vs  text.fs  text.vs  uielement.fs  uielement.vs  uiprogressbar.fs  uispriteanim.fs  uitextureelement.fs  uitextureelement.vs
(+3 files in other folders)
